recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:1: error: identifier expected but integer literal found.
def crab(10, 200) {
         ^Crab:22: error: ':' expected but '}' found.
}
^